keyvalues-serde/tests/snapshots/special_cases__snapshot_writing-to_writer_with_key.snap
---
source: keyvalues-serde/tests/special_cases.rs
expression: "std::str::from_utf8(&buf)?"
---
"Custom"
{
	"inner"	"123"
}

