keyvalues-serde/tests/snapshots/special_cases__snapshot_writing_to_file-2.snap
---
source: keyvalues-serde/tests/special_cases.rs
expression: vdf_text

---
"Custom"
{
	"inner"	"123"
}

