keyvalues-serde/tests/snapshots/special_cases__snapshot_writing_to_file-to_writer.snap
---
source: keyvalues-serde/tests/special_cases.rs
assertion_line: 35
expression: vdf_text

---
"Container"
{
	"inner"	"123"
}

