keyvalues-serde/tests/snapshots/special_cases__snapshot_writing_to_file-to_writer_with_key.snap
---
source: keyvalues-serde/tests/special_cases.rs
assertion_line: 41
expression: vdf_text

---
"Custom"
{
	"inner"	"123"
}

