keyvalues-serde/tests/snapshots/special_cases__snapshot_writing_to_file.snap
---
source: keyvalues-serde/tests/special_cases.rs
expression: vdf_text

---
"Container"
{
	"inner"	"123"
}

